--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-paginate": "^8.2.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
