--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@mui/material": "^5.15.19",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "@reduxjs/toolkit": "^2.2.4",
+    "@tanstack/react-query": "^5.45.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "browserify-fs": "^1.0.0",
     "fontsource-roboto": "^4.0.0",
     "fortawesome": "^0.0.1-security",
     "js-cookie": "^3.0.5",
@@ -32,6 +34,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.8",
     "toolkit": "^1.5.4",
     "web-vitals": "^2.1.4"
