--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
+    "prettier": "^3.3.2",
     "style-loader": "^3.3.4"
   }
 }
